Join type implementation for team and match

--- a/modules/boonex/matches/templates/base/unit.html
+++ b/modules/boonex/matches/templates/base/unit.html
@@ -16,7 +16,8 @@
         <div class="bx-twig-unit-line bx-twig-unit-special">__fans_count__ <bx_text:_bx_matches_fans /></div>
 
         <div class="bx-twig-unit-line">__country_city__</div>
-		<div class="bx-twig-unit-line">__match_type__ Match</div> 	
+		<div class="bx-twig-unit-line">__match_type__ Match</div>
+		<div class="bx-twig-unit-line">__join_type__ Join</div> 	
 
         <bx_if:full>
 
