--- a/modules/boonex/teams/templates/base/unit.html
+++ b/modules/boonex/teams/templates/base/unit.html
@@ -14,6 +14,8 @@
         <div class="bx-twig-unit-line bx-twig-unit-desc">__snippet_text__</div>
 
         <div class="bx-twig-unit-line bx-twig-unit-special">__fans_count__ <bx_text:_bx_teams_fans /></div>
+		
+		<div class="bx-twig-unit-line">__join_type__ Join</div>
 
         <div class="bx-twig-unit-line">__country_city__</div>        
 
