--- a/templates/base/unit_fan_match.html
+++ b/templates/base/unit_fan_match.html
@@ -1,9 +1,9 @@
 <div class="searchrow_block_simple sys_fan_unit bx-def-margin-sec-top-auto">
-	<bx_if:confirmed>
+	<!--bx_if:confirmed>
     <div class="bx_sys_unit_checkbox bx-def-round-corners">
         <input type="checkbox" name="sys_fan_unit[]" value="__id__" />
     </div>
-	</bx_if:confirmed>
+	</bx_if:confirmed-->
     <bx_if:admin>
     <div class="sys_unit_admin">        
         <i class="sys-icon key"></i>
