match status functionality

--- a/modules/boonex/matches/templates/base/unit.html
+++ b/modules/boonex/matches/templates/base/unit.html
@@ -17,7 +17,8 @@
 
         <div class="bx-twig-unit-line">__country_city__</div>
 		<div class="bx-twig-unit-line">__match_type__ Match</div>
-		<div class="bx-twig-unit-line">__join_type__ Join</div> 	
+		<div class="bx-twig-unit-line">__join_type__ Join</div> 
+		<div class="bx-twig-unit-line">Match Status :  __match_status__</div> 	
 
         <bx_if:full>
 
