after match validation

--- a/templates/base/unit_fan_match.html
+++ b/templates/base/unit_fan_match.html
@@ -20,6 +20,9 @@
 		<div class="searchrow_block_simple sys_fan_unit bx-def-margin-sec-top-auto">
 		__input_check_player__
 		    __thumbplayer__ 
+			<br>
+			<div> __player_response__ </div>
+			
 		</div><br>	
 		</bx_repeat:team_player>
 	    
