refresh time for block configuration

--- a/templates/tmpl_evo/_header.html
+++ b/templates/tmpl_evo/_header.html
@@ -63,3 +63,4 @@ __flush_header__
     <bx_injection:injection_header />
     <div id="notification_window" class="notifi_window"></div>
 	<div id="FloatDesc" style="position:absolute;display:none;z-index:100;"></div>
+	<input id="refreshtime" type="hidden" value="__refresh_interval__">
