--- a/templates/base/unit_fan_match_practice.html
+++ b/templates/base/unit_fan_match_practice.html
@@ -5,6 +5,9 @@
     </div>
 	</bx_if:admin>
     __thumb__
+	<bx_if:pmatch>
+	__player_response_practice__
+	</bx_if:pmatch>
 	<div class="clear_both"></div>
 	   
 </div>
