--- a/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
@@ -4,26 +4,26 @@
         __author_unit__
         <div class="infoText bx-def-margin-sec-top">
             <div class="infoUnit infoUnitFontIcon">
-               <b> Match Type : </b>  __match_type__
-            </div>
+               <b> Match Type : </b>  <img class="matchtype" src="__match_type__" alt="">
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
                <b> Minimum Players : </b> __min_player__
-            </div>
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
               <b> Maximum Players : </b> __max_player__
-            </div>
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
                <b> Address : </b> __address__
-            </div> 
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
              <b> GPS Location : </b> __gps_location__
-            </div> 
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
-             <b> Pitch Type : </b> __pitch_type__
-            </div> 
+             <b> Pitch Type : </b> <img class="pitchtype" src="__pitch_type__" alt="">
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
-              <b> Indoor : </b>  __indoor__
-            </div> 
+              <b> Game Type : </b>  <img class="gametype" src="__indoor__" alt="">
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
               <b> Price Per Hour : </b> __price_per_hour__
             </div>	
