--- a/modules/boonex/teams/templates/base/entry_view_block_info.html
+++ b/modules/boonex/teams/templates/base/entry_view_block_info.html
@@ -5,17 +5,17 @@
         <div class="infoText bx-def-margin-sec-top">
 		
 			<div class="infoUnit infoUnitFontIcon">
-               <b> Category : </b>  __cats__
-            </div>
+               <b> Category : </b>  <img class="teamcat" src="__cats__" alt="">
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
                <b> Range(in KM) : </b>  __range__
-            </div>
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
                <b> Team Location : </b>  __team_locations__
-            </div>
+            </div><br>
 			<div class="infoUnit infoUnitFontIcon">
-               <b> Team Status : </b>  __team_status__
-            </div>
+               <b> Team Status : </b>  <img class="teamstatus" src="__team_status__" alt="">
+            </div><br>
         </div>
     </div>
 </div>
