--- a/modules/boonex/teams/templates/base/unit.html
+++ b/modules/boonex/teams/templates/base/unit.html
@@ -15,7 +15,7 @@
 
         <div class="bx-twig-unit-line bx-twig-unit-special">__fans_count__ <bx_text:_bx_teams_fans /></div>
 		
-		<div class="bx-twig-unit-line"><img class="bx-twig-unit-thumb bx-def-round-corners bx-def-shadow" src="__join_type_icon__"></div>
+		<div class="bx-twig-unit-line"><img src="__team_status__" alt="">&nbsp;<img src="__join_type_icon__" alt="">  </div>
 
         <div class="bx-twig-unit-line">__country_city__</div>        
 
