--- a/templates/base/unit_fan_match_practice.html
+++ b/templates/base/unit_fan_match_practice.html
@@ -6,7 +6,9 @@
 	</bx_if:admin>
     __thumb__
 	<bx_if:pmatch>
-	__player_response_practice__
+	
+	<script>var flag = true; if(flag){  $('.thumb_username').addClass('__player_response_practice__'); flag=false;} </script>
+	<!--__player_response_practice__-->
 	</bx_if:pmatch>
 	<div class="clear_both"></div>
 	   
