--- a/modules/boonex/matches/templates/base/entry_view_block_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_info.html
@@ -4,47 +4,45 @@
         __author_unit__
         <div class="infoText bx-def-margin-sec-top">
             <div class="infoUnit infoUnitFontIcon">
-               <b> Match Type : </b>  __match_type__
-            </div>
+               <b> Match Type : </b>  <img class="matchtype" src="__match_type__" alt="">__additional_image__
+            </div><br>
 			<!--div class="infoUnit infoUnitFontIcon">
                <b> Match Size : </b> __match_size__
             </div-->
 			<div class="infoUnit infoUnitFontIcon">
               <b> Maximum Substitute : </b> __max_subtitude__
-            </div>
+            </div> <br>
 			<!--div class="infoUnit infoUnitFontIcon">
                <b> Place : </b> __place__
             </div--> 
 			<div class="infoUnit infoUnitFontIcon">
              <b> Start Date : </b> __start_date__
-            </div> 
+            </div>  <br>
 			<div class="infoUnit infoUnitFontIcon">
              <b> End Date : </b> __end_date__
-            </div> 
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
              <b> Match Start Time : </b> __match_time__
-            </div>
-			<div class="infoUnit infoUnitFontIcon">
-             <b> Block Booking : </b> __block_booking__
-            </div>
+            </div> <br>
+			<!--div class="infoUnit infoUnitFontIcon">
+             <b> Block Booking : </b> <img class="matchtype" src="__block_booking__" alt="">__block_booking__
+            </div-->
 			<div class="infoUnit infoUnitFontIcon">
              <b> Playground: </b> <a href="__playground__" target="_blank">__pgtitle__ </a>
-            </div>
+            </div> <br>
 			<!--div class="infoUnit infoUnitFontIcon">
               <b> Indoor : </b>  __indoor__
             </div--> 
 			<div class="infoUnit infoUnitFontIcon">
               <b> Maximum Age : </b> __max_age__
-            </div>
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Gender : </b> __gender__
-            </div>		
+            </div> <br>
+			__gender__	
 			<div class="infoUnit infoUnitFontIcon">
               <b> Payment : </b> __payment__
-            </div>
+            </div> <br>
 			<div class="infoUnit infoUnitFontIcon">
-              <b> Match Status : </b> __match_status__
-            </div>
+              <b> Match Status : </b> <img class="matchstatus" src="__match_status__" alt="">
+            </div> <br><br>
         </div>
     </div>
 </div>
