--- a/modules/boonex/matches/templates/base/unit.html
+++ b/modules/boonex/matches/templates/base/unit.html
@@ -16,9 +16,9 @@
         <div class="bx-twig-unit-line bx-twig-unit-special">__fans_count__ <bx_text:_bx_matches_fans /></div>
 
         <div class="bx-twig-unit-line">__country_city__</div>
-		<div class="bx-twig-unit-line">__match_type__ Match</div>
-		<div class="bx-twig-unit-line">__join_type__ Join</div> 
-		<div class="bx-twig-unit-line">Match Status :  __match_status__</div> 	
+		<div class="bx-twig-unit-line"><img src="__match_status__" alt="">&nbsp;<img src="__match_type__" alt="">&nbsp;__additional_image__&nbsp;__gender__&nbsp;<img src="__join_type__" alt=""></div>
+		<!--div class="bx-twig-unit-line">__join_type__ Join</div> 
+		<div class="bx-twig-unit-line">Match Status :  __match_status__</div--> 	
 
         <bx_if:full>
 
