match view block redesign

--- a/modules/boonex/matches/templates/base/css/main.css
+++ b/modules/boonex/matches/templates/base/css/main.css
@@ -54,3 +54,10 @@
 .strikethrough{
   text-decoration:line-through;
 }
+.pgicon{
+  margin-bottom:-14px;
+}
+.matchtypem {
+	margin-left:2px;
+	margin-right:5px;
+}
