--- a/modules/boonex/matches/templates/base/entry_view_block_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_info.html
@@ -1,49 +1,29 @@
 
-<div class="bx_events_block_info">
-    <div class="infoMain">        
-        __author_unit__
-        <div class="infoText bx-def-margin-sec-top">
-            <div class="infoUnit infoUnitFontIcon">
-               <b> Match Type : </b>  <img class="matchtype" src="__match_type__" alt="">__additional_image__
-            </div><br>
-			<!--div class="infoUnit infoUnitFontIcon">
-               <b> Match Size : </b> __match_size__
-            </div-->
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Maximum Substitute : </b> __max_subtitude__
-            </div> <br>
-			<!--div class="infoUnit infoUnitFontIcon">
-               <b> Place : </b> __place__
-            </div--> 
-			<div class="infoUnit infoUnitFontIcon">
-             <b> Start Date : </b> __start_date__
-            </div>  <br>
-			<div class="infoUnit infoUnitFontIcon">
-             <b> End Date : </b> __end_date__
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-             <b> Match Start Time : </b> __match_time__
-            </div> <br>
-			<!--div class="infoUnit infoUnitFontIcon">
-             <b> Block Booking : </b> <img class="matchtype" src="__block_booking__" alt="">__block_booking__
-            </div-->
-			<div class="infoUnit infoUnitFontIcon">
-             <b> Playground: </b> <a href="__playground__" target="_blank">__pgtitle__ </a>
-            </div> <br>
-			<!--div class="infoUnit infoUnitFontIcon">
-              <b> Indoor : </b>  __indoor__
-            </div--> 
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Maximum Age : </b> __max_age__
-            </div> <br>
-			__gender__	
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Payment : </b> __payment__
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Match Status : </b> <img class="matchstatus" src="__match_status__" alt="">
-            </div> <br><br>
+<div class="bx-twig-unit bx_groups_unit bx-def-margin-top-auto">
+     
+        __author_unit__<br>
+	<div class="bx-twig-unit-info">
+        <div class="bx-twig-unit-line">
+		<img class="pgicon"  src="__match_status__" alt=""> &nbsp;
+				<b>__match_name__</b> &nbsp; &nbsp; __teams__ &nbsp;
+               	
+		</div>
+		<br>
+		<div class="bx-twig-unit-line">
+			<!--__max_subtitude__ &nbsp;-->
+            __clock_icon__ &nbsp; __start_date__ &nbsp;__match_time__ &nbsp;
+            __additional_image__ &nbsp; __end_date__ &nbsp;
+			__pgicon__ &nbsp;
+			<a href="__playground__" target="_blank">__pgtitle__ </a> &nbsp;
+			__pg_type__ &nbsp;
+			__join_type__ &nbsp;
+			__max_age__ &nbsp;
+			__gender__	&nbsp;
+			__payment__ &nbsp;
+             
+            
         </div>
-    </div>
+		
+	</div>
 </div>
 
