--- a/modules/boonex/matches/templates/base/unit.html
+++ b/modules/boonex/matches/templates/base/unit.html
@@ -5,7 +5,7 @@
         <a href="__match_url__"><img class="bx-twig-unit-thumb bx-def-round-corners bx-def-shadow" src="__thumb_url__"></a>
     </div>
 
-    <div class="bx-twig-unit-info">
+    <div class="searchrow_block_simple sys_fan_unit bx-def-margin-sec-top-auto">
 
         <div class="bx-twig-unit-title bx-def-font-h2">
             <a href="__match_url__">__match_title__</a>
