match listing and view redesign

--- a/modules/boonex/matches/templates/base/entry_view_block_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_info.html
@@ -4,19 +4,19 @@
         __author_unit__<br>
 	<div class="bx-twig-unit-info">
         <div class="bx-twig-unit-line">
-		<img class="pgicon"  src="__match_status__" alt=""> &nbsp;
-				<b>__match_name__</b> &nbsp; &nbsp; __teams__ &nbsp;
+		<img class="pgicon" src="__match_status__" alt=""> &nbsp;
+				<span class="bx-twig-unit-title bx-def-font-h2">__match_name__ &nbsp; &nbsp; __teams__ &nbsp;</span>
                	
 		</div>
 		<br>
 		<div class="bx-twig-unit-line">
 			<!--__max_subtitude__ &nbsp;-->
-            __clock_icon__ &nbsp; __start_date__ &nbsp;__match_time__ &nbsp;
-            __additional_image__ &nbsp; __end_date__ &nbsp;
-			__pgicon__ &nbsp;
-			<a href="__playground__" target="_blank">__pgtitle__ </a> &nbsp;
-			__pg_type__ &nbsp;
-			__join_type__ &nbsp;
+            __clock_icon__  __start_date__ &nbsp;__match_time__ &nbsp;&nbsp;&nbsp;&nbsp;
+            __additional_image__ __end_date__ &nbsp;
+			__pgicon__
+			<a href="__playground__" target="_blank">__pgtitle__ </a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<!--__pg_type__ &nbsp;-->
+			__join_type__ &nbsp;&nbsp;&nbsp;&nbsp;
 			__max_age__ &nbsp;
 			__gender__	&nbsp;
 			__payment__ &nbsp;
