--- a/modules/boonex/teams/templates/base/entry_view_block_info.html
+++ b/modules/boonex/teams/templates/base/entry_view_block_info.html
@@ -1,23 +1,18 @@
-
-<div class="bx_events_block_info">
-    <div class="infoMain">        
-        __author_unit__
-        <div class="infoText bx-def-margin-sec-top">
-		
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Category : </b>  <img class="teamcat" src="__cats__" alt="">
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Range(in KM) : </b>  __range__
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Team Location : </b>  __team_locations__
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Team Status : </b>  <img class="teamstatus" src="__team_status__" alt="">
-            </div><br>
+<div class="bx-twig-unit bx_groups_unit bx-def-margin-top-auto">
+     
+        __author_unit__<br>
+	<div class="bx-twig-unit-info">
+        <div class="bx-twig-unit-line">
+		<img class="team-class" src="__team_status__" alt=""> &nbsp;
+				<span class="bx-twig-unit-title bx-def-font-h2">__team-name__ </span>
+               	
+		</div>
+		<br>
+		<div class="bx-twig-unit-line">
+		<img class="team-class" src="__join_type_icon__" alt="">&nbsp;&nbsp; <img class="team-class" src="__player_icon__"  alt="">__fans_cont__ &nbsp; &nbsp; <img class="team-class" src="__cats__" alt=""> &nbsp; __gender__
         </div>
-    </div>
+		
+	</div>
 </div>
 
 
