pg layout redesign

--- a/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
@@ -1,33 +1,16 @@
-
-<div class="bx_events_block_info">
-    <div class="infoMain">        
-        __author_unit__
-        <div class="infoText bx-def-margin-sec-top">
-            <div class="infoUnit infoUnitFontIcon">
-               <b> Match Type : </b>  <img class="matchtype" src="__match_type__" alt="">
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Minimum Players : </b> __min_player__
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Maximum Players : </b> __max_player__
-            </div><br>
-			<div class="infoUnit infoUnitFontIcon">
-               <b> Address : </b> __address__
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-             <b> GPS Location : </b> __gps_location__
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-             <b> Pitch Type : </b> <img class="pitchtype" src="__pitch_type__" alt="">
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Game Type : </b>  <img class="gametype" src="__indoor__" alt="">
-            </div> <br>
-			<div class="infoUnit infoUnitFontIcon">
-              <b> Price Per Hour : </b> __price_per_hour__
-            </div>	
+<div class="bx-twig-unit bx_groups_unit bx-def-margin-top-auto">
+     
+        __author_unit__<br>
+	<div class="bx-twig-unit-info">
+        <div class="bx-twig-unit-line">
+		<img class="pgicon" src="__pg_icon__" alt=""> &nbsp;
+				<span class="bx-twig-unit-title bx-def-font-h2">__pg_name__ </span>
+               	
+		</div>
+		<br>
+		<div class="bx-twig-unit-line">
+		<img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp; &nbsp; <img src="__pitch_type__" alt=""> __ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__
         </div>
-    </div>
+		
+	</div>
 </div>
-
