--- a/modules/boonex/matches/templates/base/palygroundlist.html
+++ b/modules/boonex/matches/templates/base/palygroundlist.html
@@ -8,17 +8,11 @@
     <div class="bx-twig-unit-info">
 
         <div class="bx-twig-unit-title bx-def-font-h2">
+		<img class="pgicon" src="__pg_icon__" alt=""> &nbsp;
             <a href="__palyground_url__">__palyground_title__</a>
         </div>
 
-		<div class="bx-twig-unit-line bx-twig-unit-desc">__pg_status__</div>
-
-        
-
-
-            <div class="bx-twig-unit-line bx-def-font-small bx-def-font-grayed">
-                __created__ <span class="bullet">&#183;</span> <bx_text:_From /> <a href="__author_url__">__author_username__</a>
-            </div>
+		<div class="bx-twig-unit-line"><img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp; &nbsp; <img src="__pitch_type__" alt=""> __ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__</div>
 
     </div>
 	<br><br>
