bugs in match module

--- a/modules/boonex/matches/templates/base/palygroundlist.html
+++ b/modules/boonex/matches/templates/base/palygroundlist.html
@@ -12,7 +12,7 @@
             <a href="__palyground_url__">__palyground_title__</a>
         </div>
 
-		<div class="bx-twig-unit-line"><img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp; &nbsp; <img src="__pitch_type__" alt=""> __ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__</div>
+		<div class="bx-twig-unit-line"><img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp;__pitch_type__ &nbsp;__ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__</div>
 
     </div>
 	<br><br>
