--- a/templates/base/unit_fan_match_practice.html
+++ b/templates/base/unit_fan_match_practice.html
@@ -6,9 +6,7 @@
 	</bx_if:admin>
     __thumb__
 	<bx_if:pmatch>
-	
-	<script>var flag = true; if(flag){  $('.thumb_username').addClass('__player_response_practice__'); flag=false;} </script>
-	<!--__player_response_practice__-->
+	__player_response_practice__
 	</bx_if:pmatch>
 	<div class="clear_both"></div>
 	   
