--- a/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
+++ b/modules/boonex/matches/templates/base/entry_view_block_pg_info.html
@@ -9,7 +9,7 @@
 		</div>
 		<br>
 		<div class="bx-twig-unit-line">
-		<img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp; &nbsp; <img src="__pitch_type__" alt=""> __ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__
+		<img src="__match_type__" alt="">&nbsp;&nbsp; <img src="__indoor__" alt="">&nbsp;__pitch_type__ &nbsp; __ball_hire__ &nbsp; __ball_bump__ &nbsp; __netted__ &nbsp; __with_lines__ &nbsp; __shop__ &nbsp; __wc__ &nbsp; __water__ &nbsp; __status__ &nbsp; __price_per_hour__
         </div>
 		
 	</div>
