--- a/templates/base/unit_fan_match.html
+++ b/templates/base/unit_fan_match.html
@@ -21,8 +21,8 @@
 		__input_check_player__
 		    __thumbplayer__ 
 			<br>
-			<script>$('.thumb_username').addClass(__player_response__);</script>
-			<!--div> __player_response__ </div-->
+			
+			<div> __player_response__ </div>
 			
 		</div><br>	
 		</bx_repeat:team_player>
