--- a/templates/base/unit_fan_match_practice.html
+++ b/templates/base/unit_fan_match_practice.html
@@ -9,5 +9,8 @@
 	__player_response_practice__
 	</bx_if:pmatch>
 	<div class="clear_both"></div>
+	__player_response_practice_confirmation__
+	
+	<div class="clear_both"></div>
 	   
 </div>
