--- a/templates/base/unit_fan_match_practice.html
+++ b/templates/base/unit_fan_match_practice.html
@@ -4,10 +4,11 @@
         <input type="checkbox" name="sys_fan_unit[]" value="__id__" />
     </div>
 	</bx_if:admin>
-    __thumb__
-	<bx_if:pmatch>
-	__player_response_practice__
-	</bx_if:pmatch>
+	<div class="player __player_response_practice__ __class__" >
+	
+	__thumb__
+	
+	</div>
 	<div class="clear_both"></div>
 	__player_response_practice_confirmation__
 	
